--- a/Views/Phones/Create.cshtml
+++ b/Views/Phones/Create.cshtml
@@ -1,5 +1,9 @@
 @model DotnetPhonebook.Models.Domain.Phone
 
+@{
+    ViewData["Title"] = "Create Contact";
+}
+
 <form asp-action="Create" asp-area="Phones" method="post">
     <div class="row">
         <div class="col-lg-12">
