--- a/Views/Phones/Signin.cshtml
+++ b/Views/Phones/Signin.cshtml
@@ -1,12 +1,13 @@
-﻿@{
+@{
     ViewData["Title"] = "Admin Login";
 }
 
 <div class="container">
     <div class="row">
-        <div class="col-md-3">
+        Login
+        @* <div class="col-md-3">
             <h3>Login</h3>
-            <form asp-action="Index" method="post">
+            <form asp-action="Login" method="post">
                 <div class="form-group">
                     <label>UserName</label>
                     <input type="text" class="form-control" id="username" name="username" />
@@ -19,7 +20,7 @@
                     <label></label>
                     <input type="submit" class="btn btn-primary" value="Login" />
                 </div>
-            </form>
+            </form> *@
         </div>
     </div>
 </div>
