--- a/Views/Phones/Index.cshtml
+++ b/Views/Phones/Index.cshtml
@@ -1,5 +1,9 @@
 @model List<DotnetPhonebook.Models.Domain.Phone>
 
+@{
+    ViewData["Title"] = "Phonebook";
+}
+
 <div class="row">
     <div class="col-md-12">
         <a asp-action="Create" asp-controller="Phones" class="btn btn-success">Create</a>
